<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
            android:id="@+id/sqlite_tvTittleStudentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqlite_tittle_student_id"
            android:textSize="@dimen/sqlite_size_item_text"
            android:layout_marginLeft="@dimen/sqlite_margin_item"
            android:layout_marginTop="@dimen/sqlite_margin_item"/>
    <TextView
            android:id="@+id/sqlite_tvStudentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqlite_student_id"
            android:textSize="@dimen/sqlite_size_item_text"
            android:layout_toRightOf="@id/sqlite_tvTittleStudentId"
            android:layout_marginTop="@dimen/sqlite_margin_item"
            android:layout_marginLeft="@dimen/sqlite_margin_item"/>

    <Button
            android:id="@+id/sqlite_btDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/delete"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/sqlite_margin"
            android:layout_marginTop="@dimen/sqlite_margin"/>
    <Button
            android:id="@+id/sqlite_btEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:layout_toLeftOf="@id/sqlite_btDelete"
            android:layout_margin="@dimen/sqlite_margin"/>
    <TextView
            android:id="@+id/sqlite_tvTittleStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqlite_tittle_student_name"
            android:textSize="@dimen/sqlite_size_item_text"
            android:layout_below="@id/sqlite_tvTittleStudentId"
            android:layout_marginLeft="@dimen/sqlite_margin_item"/>
    <TextView
            android:id="@+id/sqlite_tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqlite_student_name"
            android:textSize="@dimen/sqlite_size_item_text"
            android:layout_toRightOf="@id/sqlite_tvTittleStudentId"
            android:layout_below="@id/sqlite_tvStudentId"
            android:layout_marginLeft="@dimen/sqlite_margin_item"/>
    <TextView
            android:id="@+id/sqlite_tvTittleStudentAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqlite_tittle_student_age"
            android:textSize="@dimen/sqlite_size_item_text"
            android:layout_below="@id/sqlite_tvTittleStudentName"
            android:layout_marginLeft="@dimen/sqlite_margin_item"/>
    <TextView
            android:id="@+id/sqlite_tvStudentAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqlite_student_age"
            android:textSize="@dimen/sqlite_size_item_text"
            android:layout_toRightOf="@id/sqlite_tvTittleStudentId"
            android:layout_below="@id/sqlite_tvStudentName"
            android:layout_marginLeft="@dimen/sqlite_margin_item"/>
</RelativeLayout>