<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_write_text_tittle_input"
            android:textSize="@dimen/dialog_size_text"
            android:layout_margin="@dimen/dialog_margin"/>
    <EditText
            android:id="@+id/dialog_write_text_etInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dialog_size_text"
            android:layout_margin="@dimen/dialog_margin"
            android:inputType="none"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_write_text_tittle_file_name"
            android:textSize="@dimen/dialog_size_text"
            android:layout_margin="@dimen/dialog_margin"/>
    <EditText
            android:id="@+id/dialog_write_text_etFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dialog_size_text"
            android:singleLine="true"
            android:layout_margin="@dimen/dialog_margin"
            android:inputType="text"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
        <Button
                android:id="@+id/dialog_write_text_btWrite"
                android:layout_width="@dimen/dialog_size_button_width"
                android:layout_height="wrap_content"
                android:text="@string/dialog_write_text_button_submit"
                android:layout_margin="@dimen/dialog_margin"/>
        <Button
                android:id="@+id/dialog_write_text_btCancel"
                android:layout_width="@dimen/dialog_size_button_width"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text_button_cancel"
                android:layout_margin="@dimen/dialog_margin"/>
    </LinearLayout>
</LinearLayout>